--- a/how_do_i_look/app/views/layouts/application.html.erb
+++ b/how_do_i_look/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
 
 <%= render partial: 'shared/header' %>
 
+<% if notice %>
+  <p class="alert alert-notice"><%= notice %></p>
+<% end %>
+<% if alert %>
+  <p class="alert alert-error"><%= alert %></p>
+<% end %>
+
 <%= yield %>
 
 </body>
