--- a/how_do_i_look/app/assets/stylesheets/scaffolds.css.scss
+++ b/how_do_i_look/app/assets/stylesheets/scaffolds.css.scss
@@ -1,33 +1,50 @@
 body {
-  background-color: #fff;
+  // background-image: image-url('background-pattern.png') repeat;
+  // background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  // font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+}
+
+// #container {
+//   width: 960px;
+//   padding: 30px;
+//   margin: 0 auto;
+//   background-color: rgba(255,255,255, 1);
+//   height: 100%;
+// }
+
+// header {
+//   background-image: image-url('header_gradient.png') repeat-x;
+// }
+
+#wrapper {
+  padding: 15px, 30px, 15px, 30px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  // font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
+// pre {
+//   background-color: #eee;
+//   padding: 10px;
+//   font-size: 11px;
+// }
 
-a {
-  color: #000;
-  &:visited {
-    color: #666;
-  }
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
+// a {
+//   color: #000;
+//   &:visited {
+//     color: #666;
+//   }
+//   &:hover {
+//     color: #fff;
+//     background-color: #000;
+//   }
+// }
 
 div {
   &.field, &.actions {
