--- a/how_do_i_look/app/views/comments/_form.html.erb
+++ b/how_do_i_look/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@user, @photo, @comment]) do |f| %>
+<%= form_for(@comment) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -15,9 +15,7 @@
     <%= f.label :comment %><br>
     <%= f.text_area :body %>
   </div>
-  <div class="field">
-    <%= f.hidden_field :user_id, value: @user.id %><br>
-  </div>
+  
   <div class="field">
     <%= f.hidden_field :photo_id, value: @photo.id %><br>
 
