--- a/how_do_i_look/app/views/comments/edit.html.erb
+++ b/how_do_i_look/app/views/comments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+
+<%= link_to 'Back', user_photo_path(@photo.user, @photo) %>
