--- a/how_do_i_look/app/views/comments/index.html.erb
+++ b/how_do_i_look/app/views/comments/index.html.erb
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_user_photo_comment_path(@user, @photo) %>
