--- a/how_do_i_look/app/views/photos/index.html.erb
+++ b/how_do_i_look/app/views/photos/index.html.erb
@@ -15,13 +15,14 @@
   <tbody>
     <% @photos.each do |photo| %>
       <tr>
-        <td><%= photo.title %></td>
+        <td><%= photo.title %></td> 
         <td><a href="/users/<%= photo.user.id %>/photos/<%= photo.id %>"><%=image_tag photo.image, width: '300' %><a/></td>
-        <td><a href="/users/<%= photo.user.id %>" ><%= photo.user.name %><br><%= image_tag photo.user.picture, width: '150' %><a/></td>
+        <td><%= link_to user_path(photo.user) do %><%= photo.user.name %><br><%= image_tag photo.user.picture, width: '150' %><% end %></td>
+        <!-- <td><a href="/users/<%= photo.user.id %>" ><%= photo.user.name %><br><%= image_tag photo.user.picture, width: '150' %><a/></td> -->
         <td><%= photo.created_at %></td>
         <td><%= link_to 'Show', user_photo_path(@user, photo) if @user %></td>
-        <td><%= link_to 'Edit', edit_user_photo_path(@user, photo) if @user %></td>
-        <td><%= link_to 'Destroy', user_photo_path(@user, photo), method: :delete, data: { confirm: 'Are you sure?' } if @user %></td>
+        <td><%= link_to 'Edit', edit_user_photo_path(@user, photo) if @this_is_me %></td>
+        <td><%= link_to 'Destroy', user_photo_path(@user, photo), method: :delete, data: { confirm: 'Are you sure?' } if @this_is_me %></td>
       </tr>
     <% end %>
   </tbody>
@@ -29,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Photo', new_user_photo_path(@user) if @user %>
+<%= link_to 'New Photo', new_user_photo_path(@user) if user_signed_in? && current_user.id == @user.id %>
