--- a/how_do_i_look/app/views/shared/_header.html.erb
+++ b/how_do_i_look/app/views/shared/_header.html.erb
@@ -1,13 +1,24 @@
-<h1><%= @title %></h1>
-<%= link_to 'Users', users_path %>
-<%= link_to 'Photo-Stream', photos_path %><br>
+<div id="logo">
+  <h1>Logo</h1>
+</div>
 
-<p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
+
+<nav>
+  <%= link_to_unless_current 'My profile', user_path(current_user) if current_user %>
+  <%= link_to_unless_current 'All users', users_path %>
+  <%= link_to_unless_current 'Photo-Stream', photos_path %><br>
+</nav>
+
+<div id="sub-nav">
+    <p class="navbar-text pull-right">
+    <% if user_signed_in? %>
+      <span id="current_log-in">Logged in as <strong><%= current_user.email %></strong>.</span>
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+
+</div>
+
