--- a/how_do_i_look/app/views/users/index.html.erb
+++ b/how_do_i_look/app/views/users/index.html.erb
@@ -1,33 +1,43 @@
-<h1>Listing users</h1>
+<h1>All users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Picture</th>
-      <th>Blurb</th>
-      <th>Location</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+    
+      <!-- <h3>Name</h3>
+      <h3>Picture</h3>
+      <h3>Blurb</h3>
+      <h3>Location</h3> -->
+   
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= image_tag user.picture, width: '250' %></td>
-        <td><%= user.blurb %></td>
-        <td><%= user.location %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  
+    
+
+        <% @users.each do |user| %>
+
+          <!-- <a href="/users/<%= user.id %>"> -->
+          <div id="user">
+          
+            
+            <p class='thumbnail'><%= image_tag user.picture, width: '250' %></p>
+              <div class="user-specs">
+                <h2><%= user.name %></h2>
+                <p><strong>tagline:</strong><br>"<%= user.blurb %>"</p>
+                <p><strong>Located in:</strong><br><%= user.location %></p>
+              </div>
+            
+              <div class="options-nav">
+                <%= link_to 'Show', user, :class => "options" %> 
+                <%= link_to 'Edit', edit_user_path(user), :class => "options" if user_signed_in? && (current_user.id == user.id)  %>
+                <%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }, :class => "options"if user_signed_in? && current_user.id == user.id  %>
+              </div>
+
+            </div><!-- </a> -->
+
+          
+        <% end %>
+
+    
+  
+
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, :id => "new-user" if user_signed_in? && current_user.id == @user.id %>
