--- a/how_do_i_look/app/views/comments/_form.html.erb
+++ b/how_do_i_look/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment) do |f| %>
+<%= form_for([@photo.user, @photo, @comment]) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -21,6 +21,6 @@
 
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "create-comment" %>
   </div>
 <% end %>
