--- a/how_do_i_look/app/views/comments/edit.html.erb
+++ b/how_do_i_look/app/views/comments/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 
-<%= link_to 'Back', user_photo_path(@photo.user, @photo) %>
+<%= link_to 'Back', user_photo_path(@photo.user, @photo),:class => "create-comment back" %>
