changing asset-url

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,7 +77,7 @@ header a:hover {
 }
 
 #logo h1 {
-  background: url('Logo.svg') no-repeat;
+  background: asset-url('Logo.svg') no-repeat;
   margin-top: 7px;
   height: 70px;
   width: 300px;
