last minute button styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -443,8 +443,8 @@ nav a:active {
   text-align: center;
   line-height: 40px;
   float:left;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 5px;
+  // margin-top: 10px;
 }
 
 .edit.comment-button {
