photo form button styling

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to "#{@user.name}", user_path(@user) %>
+<%= link_to "Home", user_path(@user), :class => "create-comment" %>
